# NN

./: .gitignore  CMakeLists.txt  README.md
include/: nn.hpp  tensor.hpp
include/cuda/: cuda_tensor.cuh  kernels.cuh  layers_gpu.cuh
src/: main.cpp  mnist_cpu.cpp  mnist_gpu.cpp  nn.cpp
src/cuda/: cuda_tensor.cu  kernels.cu  layers_gpu.cu
